--- a/templates/login.html
+++ b/templates/login.html
@@ -27,7 +27,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <img class="navbar-logo" src="/images/logo_inv_small.png" />
-                <a class="navbar-brand" href="/">&nbsp;gophish</a>
+                <a class="navbar-brand" href="/">&nbsp;adiroha</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
